Changing to support dynatypes

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "className": "PortfolioEstimationBoard",
     "sdk": "2.0p",
     "javascript": [
+        "Overrides.js",
         "AddNew.js",
         "PortfolioEstimationCard.js",
         "App.js"
