--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "name": "Portfolio Estimation Board",
     "className": "PortfolioEstimationBoard",
+    "server": "https://rally1.rallydev.com",
     "sdk": "2.0rc1",
     "javascript": [
         "PortfolioEstimationCard.js",
